# pypmp

./: .gitignore  BINDINGS.md  CMakeLists.txt  README.md  pyproject.toml
docs/: generate_demo.py  template.html
patches/: README.md  remeshing_verbose.patch
simple/pypmp/: index.html
src/: _pypmp.cpp
src/pypmp/: __init__.py  remesh.py
tests/: test_pypmp.py
